; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jbd2/extr_journal.c_jbd2_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jbd2/extr_journal.c_jbd2_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jbd2_free(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @PAGE_SIZE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i8*, i8** %3, align 8
  %11 = ptrtoint i8* %10 to i64
  %12 = call i32 @free_pages(i64 %11, i32 0)
  br label %36

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* @PAGE_SIZE, align 8
  %16 = icmp ugt i64 %14, %15
  br i1 %16, label %17, label %31

17:                                               ; preds = %13
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @get_order(i64 %18)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp slt i32 %20, 3
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load i8*, i8** %3, align 8
  %24 = ptrtoint i8* %23 to i64
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @free_pages(i64 %24, i32 %25)
  br label %30

27:                                               ; preds = %17
  %28 = load i8*, i8** %3, align 8
  %29 = call i32 @vfree(i8* %28)
  br label %30

30:                                               ; preds = %27, %22
  br label %36

31:                                               ; preds = %13
  %32 = load i64, i64* %4, align 8
  %33 = call i32 @get_slab(i64 %32)
  %34 = load i8*, i8** %3, align 8
  %35 = call i32 @kmem_cache_free(i32 %33, i8* %34)
  br label %36

36:                                               ; preds = %31, %30, %9
  ret void
}

declare dso_local i32 @free_pages(i64, i32) #1

declare dso_local i32 @get_order(i64) #1

declare dso_local i32 @vfree(i8*) #1

declare dso_local i32 @kmem_cache_free(i32, i8*) #1

declare dso_local i32 @get_slab(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
